--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,31 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.h-screen {
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
+}
+
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+.gradient-light {
+  background: linear-gradient(45deg, #5ee4bf 0%, #4ed1de 100%);
+}
+
+/* Circle */
+.circle-inner {
+  stroke-dasharray: 283% 283%;
+  stroke-dashoffset: 0%;
+  stroke-width: 3;
+  stroke: rgba(255, 255, 255, 0.7);
+  fill: transparent;
+  transition: stroke-dashoffset 300ms;
+  transform: rotate(-90deg) scaleY(-1);
+  transform-origin: 50% 50%;
+}
