--- a/styles/app.css
+++ b/styles/app.css
@@ -15,7 +15,13 @@ body {
 }
 
 .gradient-light {
-  background: linear-gradient(45deg, #5ee4bf 0%, #4ed1de 100%);
+  background-color: #4158d0;
+  background-image: linear-gradient(
+    43deg,
+    #4158d0 0%,
+    #c850c0 46%,
+    #ffcc70 100%
+  );
 }
 /* Circle */
 .circle-inner {
